[package]
name = "voladdress"
description = "A crate for easy volatile memory abstraction."
repository = "https://github.com/rust-console/voladdress"
version = "1.2.0"
authors = ["Lokathor <zefria@gmail.com>", "Thomas Winwood <twwinwood@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]

[features]
# Not Part Of Semver!!! This is support for an experimental type that will
# become a stable part of the crate in `voladdress-1.1`, and until then the
# precise details are subject to change. Once the VolRegion type becomes stable
# this feature will go away. By activating this feature you agree that you've
# opted out of semver for this part of the crate.
experimental_volregion = []
# same as above
experimental_volmatrix = []

#default = ["experimental_volregion"] # don't publish while this is uncommented!
