[package]
name = "voladdress"
description = "A crate for easy volatile memory abstraction."
repository = "https://github.com/rust-console/voladdress"
version = "1.4.0"
authors = ["Lokathor <zefria@gmail.com>", "Thomas Winwood <twwinwood@gmail.com>"]
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

